# terminal-music-visualizer

./: .gitignore  Cargo.toml  LICENSE  PROJECT_IDEAS.md  README.md
memory/: heartbeat-state.json  project-completion-announcement.md
src/: lib.rs  main.rs
src/audio/: decoder.rs  mod.rs  resampler.rs
src/tui/: input.rs  mod.rs  renderer.rs
src/utils/: math.rs  mod.rs  time.rs
src/visualization/: fft.rs  mod.rs  modes.rs  palette.rs
tests/: integration_tests.rs
